# amanuensis

./: Dockerfile  Dockerfile.dev  README.md  alembic.ini  cfg_help.py  pyproject.toml  requirementes.txt  requirements.txt  run.py  setup.py
.circleci/: config.yml
amanuensis/: __init__.py  api.py  config-default.yaml  config.py  dev_settings.py  error_handler.py  errors.py  globals.py  local_settings.example.py  models.py  restful.py  sanity_checks.py  schema.py  settings.py  test_settings.py  user.py  utils.py  watch-files.sh
amanuensis/auth/: __init__.py  auth.py  errors.py
amanuensis/blueprint/: __init__.py
amanuensis/blueprint/routes/: __init__.py
amanuensis/blueprints/: admin.py  download_urls.py  filterset.py  google.py  link.py  message.py  misc.py  privacy.py  project.py  request.py  search.py  user.py
amanuensis/blueprints/data/: __init__.py  blueprint.py  indexd.py  multipart_upload.py
amanuensis/blueprints/storage_creds/: __init__.py  api.py  google.py  other.py
amanuensis/crm/: hubspot.py
amanuensis/resources/admin/: __init__.py  admin_associated_user.py  admin_groups.py  admin_institutions.py  admin_projects.py  admin_providers.py  admin_state.py  admin_users.py
amanuensis/resources/aws/: boto_manager.py  utils.py
amanuensis/resources/consortium_data_contributor/: __init__.py
amanuensis/resources/fence/: __init__.py
amanuensis/resources/filterset/: __init__.py
amanuensis/resources/google/: access_utils.py  utils.py  validity.py
amanuensis/resources/group/: __init__.py
amanuensis/resources/institution/: __init__.py
amanuensis/resources/message/: __init__.py
amanuensis/resources/openid/: google_oauth2.py  idp_oauth2.py  ras_oauth2.py
amanuensis/resources/project/: __init__.py
amanuensis/resources/provider/: __init__.py
amanuensis/resources/request/: __init__.py
amanuensis/resources/search/: __init__.py
amanuensis/resources/storage/: __init__.py  cdis_hmac.py  cdis_jwt.py
amanuensis/resources/user/: __init__.py  user_session.py
amanuensis/resources/userdatamodel/: __init__.py  userdatamodel_associate_user.py  userdatamodel_associated_user.py  userdatamodel_associated_user_roles.py  userdatamodel_consortium_data_contributor.py  userdatamodel_filterset.py  userdatamodel_group.py  userdatamodel_institution.py  userdatamodel_message.py  userdatamodel_project.py  userdatamodel_provider.py  userdatamodel_request.py  userdatamodel_search.py  userdatamodel_state.py  userdatamodel_user.py
amanuensis/scripting/: fence_create.py
amanuensis/sync/: sync_users.py
amanuensis/utils/: __init__.py  manifest.py  parse.py  s3.py  scheduling.py
amanuensis/utils/transforms/: __init__.py  bcr_xml_to_json.py  graph_to_doc.py
deployment/: fence.conf
deployment/uwsgi/: uwsgi.ini  wsgi.py
fence/: __init__.py  config-default.yaml  local_settings.example.py  models.py  user.py  utils.py
fence/auth/: auth.py
fence/blueprints/: search.py
fence/blueprints/data/: blueprint.py
fence/crm/: hubspot.py
fence/resources/admin/: admin_institutions.py
fence/resources/institution/: __init__.py
fence/resources/search/: __init__.py
fence/resources/user/: __init__.py
fence/resources/userdatamodel/: userdatamodel_institution.py  (+1 more)
fence/scripting/: fence_create.py
fence/sync/: sync_users.py
migrations/: env.py
migrations/versions/: 03ceab80c865_initial_revision.py  09a38764b3a0_add_transition_table_and_transition_data.py  40b00996555e_update_project_has_associated_user.py  43d3b976fdb8_initial_migration.py  57bc0c5a9733_require_value_for_role.py  72936c3fdac6_add_associated_user_roles_tables_and_.py  91b6a04820cd_add_deprecated.py  b1c821586aa7_remove_duplicate_states.py  b1c926c2d318_add_search_snapshot.py  b506b97bbfce_migrate_all_searches_after_dd_mol_.py  e2dde7e39938_add_interact.py  f7ef7b53a36e_null_user_id_column.py  fa0c3fdf48ea_add_request_states.py
tests/: test-fence-config.yaml
tests/google/: conftest.py
tests/login/: test_login_user.py
tests_endpoints/: conftest.py
tests_endpoints/endpoints/: conftest.py  test_admin_force_project_state.py  test_build_project.py  test_cache_consortiums.py  test_change_requests_with_new_filter_set.py  test_delete_project.py  test_get_presigned_url.py  test_misc.py  test_overall_project_status.py  test_patch_125.py
tests_project/: test_overall_project_state.py
(+12 files in other folders)
