[tool.poetry]
name = "amanuensis"
version = "0.1.3"
description = "Gen3 AuthN/AuthZ OIDC Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/chicagopcdc/amanuensis"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
alembic = "1.8.1"
authlib = "<=0.14.2"
authutils = "4.0.0"
bcrypt = "^3.1.4"
boto3 = "~1.9.91"
botocore = "^1.12.253"
cached_property = "^1.5.1"
cdiserrors = "<2.0.0"
cdislogging = "^1.0.0"
cdispyutils = "^1.0.4"
cryptography = "==2.8"
flask = "^1.1.1"
MarkupSafe = "<2.0"
flask-cors = "^3.0.3"
flask-restful = "^0.3.6"
flask_sqlalchemy_session = "^1.1"
email_validator = "^1.1.1"
gen3authz = "^1.0.4"
gen3cirrus = "^1.3.0"
gen3config = "^0.1.7"
gen3users = "^0.6.0"
markdown = "^3.1.1"
paramiko = "^2.6.0"
psycopg2 = "^2.8.6"
pyjwt = "^1.5.3"
python_dateutil = "^2.6.1"
python-jose = "^2.0.2"
pyyaml = "^5.1"
requests = "^2.18.0"
retry = "^0.9.2"
sqlalchemy = "^1.3.3"
marshmallow-sqlalchemy = "0.24.2"
werkzeug = "^0.16.0"
html2text = "^2020.1.16"
pycryptodome = "3.9.8"
Flask-Migrate = "^3.1.0"
pcdcutils = {git = "https://github.com/chicagopcdc/pcdcutils.git", rev = "0.1.2"}
userportaldatamodel = {git = "https://github.com/chicagopcdc/userPortalDataModel.git", rev = "1.2.9"}
# pcdcutils = {git = "https://github.com/chicagopcdc/pcdcutils.git", rev = "pcdc_dev"}
hubspotclient = {git = "https://github.com/chicagopcdc/hubspotclient.git", rev = "1.0.1"}
# userportaldatamodel = {git = "https://github.com/chicagopcdc/userPortalDataModel.git", rev = "handle-manual-data-request"}

[tool.poetry.dev-dependencies]
addict = "^2.2.1"
cdisutilstest = {git = "https://github.com/uc-cdis/cdisutils-test", rev = "1.0.0"}
codacy-coverage = "^1.3.11"
coveralls = "^2.1.1"
mock = "^2.0.0"
moto = "^1.1.24"
pytest = "^3.2.3"
pytest-cov = "^2.5.1"
pytest-flask = "^0.15.0"

[tool.poetry.scripts]
fence-create = 'bin.fence_create:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
