[tool.poetry]
name = "amanuensis"
version = "2.6.0"
description = "Gen3 Portal related data"
authors = ["PCDC UChicago <lgraglia@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/chicagopcdc/amanuensis"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = "^3.6"
alembic = "^1.7.7"
authlib = "^0.11"
authutils = "6.1.0"
bcrypt = "^3.1.4"
boto3 = "~1.9.91"
botocore = "^1.12.253"
cached_property = "^1.5.1"
cdiserrors = "<2.0.0"
cdislogging = "^1.0.0"
cdispyutils = "^2.0.1"
cryptography = ">=3.2"
flask = ">=1.1.1"
MarkupSafe = "<2.0"
flask-cors = "^3.0.3"
flask-restful = "^0.3.6"
flask_sqlalchemy_session = "^1.1"
email_validator = "^1.1.1"
gen3authz = "^1.5.1"
gen3cirrus = "^2.0.0"
gen3config = "^0.1.7"
gen3users = "^0.6.0"
markdown = "^3.1.1"
paramiko = "^2.6.0"
psycopg2 = "^2.8.3"
pyjwt = "^1.5.3"
python_dateutil = "^2.6.1"
python-jose = "^2.0.2"
pyyaml = "^5.1"
requests = ">=2.18.0"
retry = "^0.9.2"
sqlalchemy = "^1.3.3"
marshmallow-sqlalchemy = "0.24.2"
werkzeug = "^1.0.0"
html2text = "^2020.1.16"
pycryptodome = "3.9.8"
pcdcutils = {git = "https://github.com/chicagopcdc/pcdcutils.git", rev = "0.1.2"}
userportaldatamodel = {git = "https://github.com/chicagopcdc/userPortalDataModel.git", rev = "1.4.1"}
# pcdcutils = {git = "https://github.com/chicagopcdc/pcdcutils.git", rev = "pcdc_dev"}
# hubspotclient = {git = "https://github.com/chicagopcdc/hubspotclient.git", rev = "0.1.0"}
# userportaldatamodel = {git = "https://github.com/chicagopcdc/userPortalDataModel.git", rev = "pcdc_dev"}
hubspotclient = {git = "https://github.com/chicagopcdc/hubspotclient.git", rev = "1.0.1"}
pcdc-aws-client = {git = "https://github.com/chicagopcdc/pcdc-aws-client.git", rev = "0.3.3"}

[tool.poetry.dev-dependencies]
addict = "^2.2.1"
cdisutilstest = {git = "https://github.com/uc-cdis/cdisutils-test", rev = "1.0.0"}
codacy-coverage = "^1.3.11"
coveralls = "^2.1.1"
mock = "^2.0.0"
moto = "^1.1.24"
pytest = "^3.2.3"
pytest-cov = "^2.5.1"
pytest-flask = "^0.15.0"

[tool.poetry.scripts]
fence-create = 'amanuensis.scripting.fence_create:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
